@@ -869,6 +869,7 @@ Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
 Item.ChimaeraWing.Pass=**CHIMAERA WING**
 Item.ChimaeraWing.Name=Chimaera Wing
 Item.ChimaeraWing.Lore=[[GRAY]]Teleports you to your bed.
+Item.ChimaeraWing.NotEnough=[[RED]]You need [[YELLOW]]{0}[[RED]] more [[GOLD]]{1}[[RED]]!
 Item.Generic.Wait=[[RED]]You need to wait before you can use this again! [[YELLOW]]({0}s)
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
 Item.FluxPickaxe.Name=Flux Pickaxe
